syntax = "proto3";

package erda.core.pipeline.action;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "core/extension/extension.proto";

option go_package = "github.com/erda-project/erda-proto-go/core/pipeline/action/pb";

service ActionService {
    rpc List (PipelineActionListRequest) returns (core.extension.QueryExtensionsResponse) {
        option (google.api.http) = {
            get: "/api/pipeline-actions",
        };
    }
    rpc Save (PipelineActionSaveRequest) returns (core.extension.ExtensionVersionCreateResponse) {
        option (google.api.http) = {
            post: "/api/pipeline-actions/actions/save",
        };
    }
    rpc Delete (PipelineActionDeleteRequest) returns (PipelineActionDeleteResponse) {
        option (google.api.http) = {
            delete: "/api/pipeline-actions",
        };
    }
}

// list
message PipelineActionListRequest {
    bool all = 1;
    string labels = 3;
}

// save
message PipelineActionSaveRequest {
    string readme = 1;
    string dice = 2;
    string spec = 3;
}

// delete
message PipelineActionDeleteRequest {
    string name = 1;
    string version = 2;
    string location = 4;
}

message PipelineActionDeleteResponse {

}
